nowrap fix

--- a/app/bundles/CoreBundle/Assets/css/app.css
+++ b/app/bundles/CoreBundle/Assets/css/app.css
@@ -2029,6 +2029,7 @@ ul.dropdown-menu-form {
   font-size: 75%;
   font-weight: 700;
   gap: 6px;
+  white-space: nowrap;
   line-height: 1.5;
   padding: 0.25em 0.8em 0.15em 0.8em;
   border-radius: 200px;
