--- a/app/bundles/CoreBundle/Assets/css/app/less/components/labels.less
+++ b/app/bundles/CoreBundle/Assets/css/app/less/components/labels.less
@@ -7,6 +7,7 @@
   font-size: 75%;
   font-weight: 700;
   gap: 6px;
+  white-space: nowrap;
   line-height: 1.5;
   padding: 0.25em 0.8em 0.15em 0.8em;
   border-radius: @border-radius-infinite;
